# vcf_to_23-me

./: README.md  environment.yml  pyproject.toml  requirements.txt
dbSNP/: README.md  download_dbSNP_GRCh37_latest.sh  download_dbSNP_GRCh38_latest.sh
vcf/: README.md  test.vcf
vcf_to_23andme/: __init__.py  main.py
vcf_to_23andme/modules/: check_rsIDs.py  hard_filter.py  update_formatting.py  vcf_to_23_and_me.py
